Bugs squashed and tracking in

--- a/pages/static/src/scss/components/_nav.scss
+++ b/pages/static/src/scss/components/_nav.scss
@@ -35,6 +35,7 @@
     display: flex;
     position: relative;
     justify-content: space-between;
+    height: 61px;
   }
 
   .navbar__lower {
@@ -49,12 +50,14 @@
   }
 
   .nav-list {
-    display: flex;
+    // display: box;
+    // display: flex;
     margin: auto;
     list-style-type: none;
     padding: 0;
     margin: 0;
     text-align: center;
+    position: relative;
     
     &__button {
       padding: 5px;
@@ -71,11 +74,13 @@
     }
     
     li {
-      display: inline-block;
+      display: block;
+      width: 20%;
+      float: left;
       margin: 0;
       border: 1px solid #e7e7e7;
       border-width: 0 1px 0 0;
-      flex: 1;
+      // flex: 1 1 auto;
       
       &:first-child {
         border-width: 0 1px 0 1px;
@@ -219,6 +224,9 @@
   .navbar__donate {
     @extend .uppercase;
     
+    position: absolute;
+    right: 10px;
+    top: 10px;
     padding: 14px 18px;
     font-weight: bold;
     align-self: center;
@@ -226,6 +234,12 @@
     height: 40px;
     font-weight: bolder;
     font-size: 13px;
+  }
+  
+  &__social {
+    position: absolute;
+    left: 10px;
+    top: 12px;
   }
   
   &__social, &__mobile {
@@ -242,15 +256,19 @@
     &--twitter {
       @extend .social-icon;
       @extend .twitter-icon;
-      background-size: 60% auto;
+      background-size: 18px 15px;
       background-color: $blue;
+      background-position: center;
+      background-repeat: no-repeat;
     }
     
     &--facebook {
       @extend .social-icon;
       @extend .facebook-icon;
-      background-size: auto 50%;
+      background-size: 7px 15px;
       background-color: darken($blue,30);
+      background-position: center;
+      background-repeat: no-repeat;
     }
     
     @include text-indent();
@@ -348,6 +366,7 @@
       align-content: stretch;
       justify-content: initial;
       border-bottom: 1px solid #e7e7e7;
+      height: 51px;
     }
     
     .nav-list {
@@ -357,6 +376,7 @@
         height: 40px;
         border-width: 0 0 1px; 
         background: #f5f5f5;
+        width: 100%;
         
         &:first-child {
           border-width: 0 0 1px;
@@ -406,7 +426,7 @@
       display: block;
       border: 1px solid #e7e7e7;
       border-width: 0 1px 0 0;
-      height: 50px;
+      height: 51px;
       width: 50px;
     }
     
@@ -417,15 +437,18 @@
       position: relative;
     }
     
-    &__donate {
-      float: right;
+    & .navbar__donate {
+      // float: right;
       display: none;
+      top: 5px;
+      right: 5px;
     }
     
     &__social {
       position: absolute;
       right: 5px;
       top: 5px;
+      left: auto;
       display: block;
     }
     
