--- a/pages/static/src/scss/layout/_global.scss
+++ b/pages/static/src/scss/layout/_global.scss
@@ -24,6 +24,8 @@ body {
   }
 }
 
+svg { max-height: 100%; }
+
 input {
   border-radius: 3px;
   border: 1px solid #ccc;
